2022-06-15 Franz Holzinger <franz@ttproducts.de>
    * support backend when TypoScript values might be unset.

2022-03-08 Franz Holzinger <franz@ttproducts.de>
    * bugfixes for PHP 8

2022-02-09 Franz Holzinger <franz@ttproducts.de>
    * remove method setTableFieldArray
    * bugfixes for PHP 8

2022-01-24 Franz Holzinger <franz@ttproducts.de>
    * works with PHP 7.4 - 8 and TYPO3 10 - 11.5 now

2021-10-28 Franz Holzinger <franz@ttproducts.de>
    * add support for TYPO3 11.5
    * remove support for PHP 5.5
    * remove file ext_autoload.php

2021-01-04 Franz Holzinger <franz@ttproducts.de>
    * add support for TYPO3 10.4

2020-05-26 Franz Holzinger <franz@ttproducts.de>
    * fix issues #4 and #5: Preserve quotes inside of quoted string in method transformWhere.

2020-05-25 Franz Holzinger <franz@ttproducts.de>
    * fix issue #4: No spaces must be inserted between quotes. The parts between the quotes must remain as they are.

2020-05-23 Franz Holzinger <franz@ttproducts.de>
    * fix issue #2: The method transformWhere shall take care of the blanks before and after round brackets

2020-05-20 Franz Holzinger <franz@ttproducts.de>
    * modifications according the Coding Guidelines
    * support for backend query generation

2020-01-30 Franz Holzinger <franz@ttproducts.de>
    * readd autoloader file ext_autoload.php

2019-11-14 Franz Holzinger <franz@ttproducts.de>
    * commpatibility with TYPO3 9.4 deprecation no. 85543: Consider the sys_language_uid coming from TYPO3\CMS\Core\Context\Context method getAspect.

2019-11-04 Franz Holzinger <franz@ttproducts.de>
    * replace the PHP method strstr by the faster method strpos
    * modify composer.json

2019-07-16 Franz Holzinger <franz@ttproducts.de>
    * ready for TYPO3 9.5.x

2018-10-23 Franz Holzinger <franz@ttproducts.de>
    * initialize $listArr.

2018-09-20 Franz Holzinger <franz@ttproducts.de>
    * initialize internal array variables as arrays

2018-05-07 Franz Holzinger <franz@ttproducts.de>