@@ -1,3 +1,10 @@
+
+2022-08-17 Franz Holzinger <franz@ttproducts.de>
+    * Breaking no.88143: Version-related database field “t3ver_id” removed
+    * Breaking no.87193: Deprecated functionality removed: database field “t3ver_label“ removed
+    * Add workspace fields “t3ver_wsid“, “t3ver_state“ and “t3ver_move_id“
+    * The fields “sorting“, “sorting_foreign“ must be contained in the TCA. Remove them from noTCAFieldArray. It is not certain that they are present in each table.
+
 2022-06-15 Franz Holzinger <franz@ttproducts.de>
     * support backend when TypoScript values might be unset.
 
